test/errors/error6.sp
%|id_1|>|id_2|.
sorts
#s=aba..aa.  
predicates
rules
